# gl

./: CMakeLists.txt  README.md  main.cpp
render/include/: Bone.h  animation.h  animator.h  animdata.h  assimp_glm_helper.h  camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h
shader/: 1.model_loading.fs  anim_model.vert
